--- a/package.json
+++ b/package.json
@@ -18,14 +18,27 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
+    "@narik/custom-validators": "^9.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^14.0.1",
+    "@popperjs/core": "^2.11.6",
+    "angular2-text-mask": "^9.0.0",
+    "bootstrap": "^5.2.3",
+    "js-brasil": "^2.5.3",
+    "ng-brazil": "^2.5.0",
+    "ngx-custom-validators": "^11.0.1",
+    "ngx-image-cropper": "^6.3.2",
+    "ngx-spinner": "^15.0.1",
+    "ngx-toastr": "^16.1.0",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
+    "text-mask-addons": "^3.8.0",
+    "tslib": "^2.5.0",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.1.6",
     "@angular/cli": "~15.1.6",
     "@angular/compiler-cli": "^15.1.0",
+    "@angular/localize": "^15.1.0",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
